<resources>
    <string name="app_name">TestChoseTag</string>


    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="not_supported">Not supported</string>

    <string name="apply">立即申请</string>
    <string name="blank">- - - -</string>

    <string name="transfer_title">请输入标题</string>
    <string name="transferSumAmt">债权总价</string>
    <string name="remain_principal">待收本金</string>
    <string name="remain_interest">待收利息</string>
    <string name="remain_bill">待收期数</string>
    <string name="pub_title">转让标题</string>
    <string name="select">请选择</string>
    <string name="transfer_apply">债权申请</string>
    <string name="transfer_pub">债权转让</string>
    <string name="transfer_period">转让期限</string>
    <string name="please_choose_period">请选择转让期限</string>
    <string name="transfer_base_price">请输入转让底价</string>
    <string name="transferBase">转让底价</string>
    <string name="back">返回</string>

</resources>
